<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner"
                android:padding="@dimen/_1sdp">
                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_13sdp"
                    android:src="@drawable/ic_baseline_location_on_24"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_marginEnd="@dimen/_1sdp"
                    app:tint="@color/dark_grey" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/location"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/currentlocation"
                    android:fontFamily="@font/firs_nueu_medium"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_baseline_language_24"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:id="@+id/changelang"
                android:layout_marginEnd="@dimen/_6sdp"
                app:tint="@color/dark_grey" />

        </LinearLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/morning"
            android:layout_marginEnd="@dimen/_2sdp"
            android:id="@+id/weatherIcon"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:clickable="true"
            app:cardBackgroundColor="#F6F5F5"
            android:layout_marginTop="-4dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="32°"
                    android:id="@+id/temperature"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_22sdp"
                    android:fontFamily="@font/firs_nueu_medium"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/message"
                    android:text="@string/morning"
                    android:layout_gravity="center_horizontal"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:fontFamily="@font/firs_nueue"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:background="@drawable/rounded_corner_white">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/humidity"
                            android:text="32°"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/firs_nueu_medium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_grey"
                            android:text="@string/humidity"
                            android:layout_gravity="center_horizontal"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/firs_nueue"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/_0_01_in"
                            android:textSize="@dimen/_12sdp"
                            android:id="@+id/prec"
                            android:fontFamily="@font/firs_nueu_medium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_grey"
                            android:text="@string/precipitation"
                            android:layout_gravity="center_horizontal"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/firs_nueue"/>
                    </LinearLayout>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:id="@+id/wind"
                            android:text="6 mph/s"
                            android:textSize="@dimen/_12sdp"
                            android:fontFamily="@font/firs_nueu_medium"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/dark_grey"
                            android:text="@string/wind_speed"
                            android:layout_gravity="center_horizontal"
                            android:textSize="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/firs_nueue"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_height="@dimen/_48sdp"
            android:clickable="true"
            android:id="@+id/chatgptcard"
            android:background="@drawable/grass_green_button_rect"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/logo_circle"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/checkai"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/firs_nueue"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_10sdp"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_13sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_fields"
                android:fontFamily="@font/firs_nueue_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_all"
                android:clickable="true"
                android:id="@+id/seeallfields"
                android:fontFamily="@font/firs_nueu_medium"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/farmFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="5"
            tools:listitem="@layout/farm_view_home" />



    </LinearLayout>

</RelativeLayout>